--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
+<!--
+Katherine Roughan
+Last Updated 4/8/2020
+Built utilizing the W3.CSS html framework
+and derived from the "Screen 50/50 Template" from
+https://www.w3schools.com/w3css/w3css_templates.asp
+-->
+
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>resident dork</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,7 +18,7 @@
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>My Logo</h1>
+      <h1>Katherine Roughan</h1>
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
@@ -24,8 +32,8 @@
       <h1>About Me</h1>
       <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Please Excuse the mess, my webpage is under construction.</p>
+        <p>.</p>
       </div>
     </div>
   </div>
@@ -121,7 +129,7 @@
     <div class="w3-padding-64">
       <p>..for a cup of coffee, or whatever.</p>
       <p>Chicago, US</p>
-      <p>+00 1515151515</p>
+      <p>+0 845 499 6643</p>
       <p>test@test.com</p>
     </div>
   </div>
