--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://www.w3schools.com/w3css/w3css_templates.asp
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
-      <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
+      <!-- <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a> -->
     </div>
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
@@ -44,7 +44,7 @@ https://www.w3schools.com/w3css/w3css_templates.asp
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
-      <p>Some of my latest projects.</p>
+      <p>Some of my recemt projects.</p>
     </div>
     <div class="w3-row">
       <div class="w3-half">
@@ -54,23 +54,7 @@ https://www.w3schools.com/w3css/w3css_templates.asp
         <img src="/w3images/workbench.jpg" style="width:100%">
       </div>
     </div>
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
-      </div>
-    </div>
-
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="/w3images/sound.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-    </div><br>
+    <br>
     <p>Just call me awesome.</p>
   </div>
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
@@ -85,51 +69,27 @@ https://www.w3schools.com/w3css/w3css_templates.asp
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>2012-2016</td>
-            <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
+            <td>2016-2020</td>
+            <td>Bachelor of Computer Science</td>
+            <td>Rensselaer PolyTechnic Institute</td>
           </tr>
-          <tr>
-            <td>2009-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
-          </tr>
-          <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
-          <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
+
         </table>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Third Grid: Swing By & Contact -->
+<!-- Third Grid: Swing By & Contact
 <div class="w3-row" id="contact">
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>Swing By</h1>
+      <h1>Located</h1>
     </div>
     <div class="w3-padding-64">
       <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+0 845 499 6643</p>
+      <p>New York, US</p>
+      <p>+1-845-499-6643</p>
       <p>test@test.com</p>
     </div>
   </div>
@@ -155,6 +115,7 @@ https://www.w3schools.com/w3css/w3css_templates.asp
     </div>
   </div>
 </div>
+-->
 
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
