added cover photo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://www.w3schools.com/w3css/w3css_templates.asp
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <img src="images/KR1sq.png" class="w3-margin w3-circle" alt="Me" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>Please Excuse the mess, my webpage is under construction.</p>
         <p>.</p>
