--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@ as well as other examples provided at www.w3schools.com
 <div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
-  <a href="/index1.html">Contact</a>
+  <a href="/index.html">Contact</a>
 </div>
 
 
