--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@ as well as other examples provided at www.w3schools.com
 
 
 <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="/index2.html">Contact</a>
+  <a href="/index2.html">Page 2</a>
 </div>
 
 <!-- First Grid: Logo & About -->
