--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ as well as other examples provided at www.w3schools.com
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
-      <p>Some of my recemt projects.</p>
+      <p>Some of my recent projects.</p>
     </div>
     <div class="w3-row">
       <div class="w3-half">
