--- a/index2.html
+++ b/index2.html
@@ -48,6 +48,8 @@ as well as other examples provided at www.w3schools.com
   <a href="/index.html">Home</a>
 </div>
 
+<p>It's really empty here!</p>
+
 
 </body>
 </html>
