--- a/index2.html
+++ b/index2.html
@@ -51,5 +51,11 @@ as well as other examples provided at www.w3schools.com
 <p>It's really empty here!</p>
 
 
+<!-- Footer -->
+<footer class="w3-container w3-black w3-padding-16">
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+
 </body>
 </html>
