--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ HEX: #f7786b
 
 <!--Fixed Postion Dropdown Navbar-->
 <div class="w3-bar " style="background:#f7cac9; position: fixed">
- <a href="/index2.html" class="w3-bar-item w3-button">Home</a>
- <a href="#" class="w3-bar-item w3-button">Link 1</a>
+ <a href="/index1.html" class="w3-bar-item w3-button">Home</a>
+ <a href="/index2.html" class="w3-bar-item w3-button">Page 2</a>
  <div class="w3-dropdown-hover">
    <button class="w3-button">Dropdown</button>
    <div class="w3-dropdown-content w3-bar-block w3-card-4">
