--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@ as well as other examples provided at www.w3schools.com
 
 <!--Fixed Postion Dropdown Navbar-->
 <div class="w3-bar " style="background:#f7cac9; position: fixed">
- <a href="/index1.html" class="w3-bar-item w3-button">Home</a>
+ <a href="/index.html" class="w3-bar-item w3-button">Home</a>
  <a href="/index2.html" class="w3-bar-item w3-button">Page 2</a>
  <div class="w3-dropdown-hover">
    <button class="w3-button">Dropdown</button>
