--- a/index.html
+++ b/index.html
@@ -33,14 +33,6 @@ HEX: #f7786b
 <div class="w3-bar " style="background:#f7cac9; position: fixed">
  <a href="/index.html" class="w3-bar-item w3-button">Home</a>
  <a href="/index2.html" class="w3-bar-item w3-button">Page 2</a>
- <div class="w3-dropdown-hover">
-   <button class="w3-button">Dropdown</button>
-   <div class="w3-dropdown-content w3-bar-block w3-card-4">
-     <a href="#" class="w3-bar-item w3-button">Link 1</a>
-     <a href="#" class="w3-bar-item w3-button">Link 2</a>
-     <a href="#" class="w3-bar-item w3-button">Link 3</a>
-   </div>
- </div>
 </div>
 
 <!-- First Grid: Logo & About -->
@@ -78,7 +70,7 @@ HEX: #f7786b
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <embed src=""  width="500" height="200">
       </div>
       <div class="w3-half">
         <img src="/w3images/workbench.jpg" style="width:100%">
